# AI-Open-Science

./: CITATION.cff  README.md  codemeta.json  pyproject.toml
.github/workflows/: ci.yml
Papers/: Indice.txt
docs/: .readthedocs.yaml  index.md  install.md  rationale.md  usage.md
documentation/: rationale.md
results/: links.txt
scripts/: charts.py  keywordCloud.py  list.py
tests/: tests01.py
