[project]
name = "ai-open-science"
version = "0.1.0"
description = "This repository provides tools for extracting and visualizing information from scientific papers in XML format. Using [GROBID](https://github.com/kermitt2/grobid). for document processing, the scripts generate keyword clouds, charts displaying the number of figures per document, and extract links from XML files."
authors = [
    {name = "fran2410",email = "franciscochicotemartin@gmail.com"}
]
license = {text = "http://www.apache.org/licenses/LICENSE-2.0.html"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]

[tool.poetry.group.test]
optional = true
dependencies = 
    pytest = "^7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
